--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     <!-- ####################    footer    #################### -->
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="footer-logo-text">
                 <a class="logo" href="./index.html">Web<span class="footer-logo-style">Studio</span></a>
                 <p class="footer-text"> Increase the flow of customers and sales for your business with digital
