--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <li class="feature-list-item">
                         <div class="feature-icon">
                             <svg style="feature-icon" width="64" height="64">
-                                <use href="./images/ivons.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title-three">Strategy</h3>
@@ -83,7 +83,7 @@
                     <li class="feature-list-item">
                         <div class="feature-icon">
                             <svg style="feature-icon" width="64" height="64">
-                                <use href="./images/ivons.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title-three">Punctuality</h3>
@@ -95,7 +95,7 @@
                     <li class="feature-list-item">
                         <div class="feature-icon">
                             <svg style="feature-icon" width="64" height="64">
-                                <use href="./images/ivons.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title-three">Diligence</h3>
@@ -106,7 +106,7 @@
                     <li class="feature-list-item">
                         <div class="feature-icon">
                             <svg style="feature-icon" width="64" height="64">
-                                <use href="./images/ivons.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title-three">Technologies</h3>
@@ -133,28 +133,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/ivons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/ivons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/ivons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/ivons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -171,28 +171,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -209,28 +209,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -247,28 +247,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg width="16" height="16" class="social-link-icon">
-                                            <use href="./images/icon/ivons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -403,28 +403,28 @@
                     <li class="social-list-item">
                         <a href="" class="social-link footer-link">
                             <svg width="24" height="24" class="social-link-icon-footer">
-                                <use href="./images/ivons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-item">
                         <a href="" class="social-link footer-link">
                             <svg width="24" height="24" class="social-link-icon-footer">
-                                <use href="./images/ivons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-item">
                         <a href="" class="social-link footer-link">
                             <svg width="24" height="24" class="social-link-icon-footer">
-                                <use href="./images/ivons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-item">
                         <a href="" class="social-link footer-link">
                             <svg width="24" height="24" class="social-link-icon-footer">
-                                <use href="./images/ivons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
